navbar alignment issues sorted. experienting with timeline items alignment and layout

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -13,7 +13,8 @@ main {
 }
 
 a {
-  color: rgb(92, 169, 200);
+  /* color: rgb(92, 169, 200); */
+  color:rgb(216 139 51);
 }
 
 a.navbar li.nav-link {
